--- a/src/components/Content/Certificates/Certificates.module.scss
+++ b/src/components/Content/Certificates/Certificates.module.scss
@@ -4,7 +4,7 @@
   font-family: "inter";
   .selectCertificate {
     padding: 25.5px 45px;
-    border-radius: 22.5px;
+    border-radius: var(--borderRadius);
     background-color: $themeBgColor;
 
     .certificateForm {
@@ -45,7 +45,7 @@
 
   .prevApplied {
     padding: 25.5px 45px;
-    border-radius: 22.5px;
+    border-radius: var(--borderRadius);
     background-color: $themeBgColor;
     display: flex;
     flex-direction: column;
