--- a/src/components/Content/Clubs/SportsFacilities/SportsFacilities.module.scss
+++ b/src/components/Content/Clubs/SportsFacilities/SportsFacilities.module.scss
@@ -3,7 +3,7 @@
 .container {
   font-family: "Inter", sans-serif;
   background-color: $themeBgColor;
-  border-radius: 22.5px;
+  border-radius: var(--borderRadius);
   padding: 25.5px 45px;
   margin-bottom: 24px;
   font-size: 18px;
