--- a/src/components/Content/Dues/duesSubPages/FeeDemand/FeeDemand.module.scss
+++ b/src/components/Content/Dues/duesSubPages/FeeDemand/FeeDemand.module.scss
@@ -2,7 +2,7 @@
 
 .mainText {
   background-color: $themeBgColor;
-  border-radius: 22.5px;
+  border-radius: var(--borderRadius);
   display: flex;
   justify-content: center;
   align-items: center;
