--- a/src/components/Content/MyProfile/myProfileSubPage/General/General.module.scss
+++ b/src/components/Content/MyProfile/myProfileSubPage/General/General.module.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   gap: 5px;
   padding: 25.5px 45px;
-  border-radius: 22.5px;
+  border-radius: var(--borderRadius);
   background-color: $themeBgColor;
   //   align-items: center;
   .detail {
