--- a/src/components/Content/Scholarships/scholarshipsSubPage/Gate/Gate.module.scss
+++ b/src/components/Content/Scholarships/scholarshipsSubPage/Gate/Gate.module.scss
@@ -16,7 +16,7 @@
   }
   .formContainer {
     padding: 25.5px 45px;
-    border-radius: 22.5px;
+    border-radius: var(--borderRadius);
     background-color: $themeBgColor;
     display: flex;
     flex-direction: column;
