--- a/src/components/Content/Scholarships/scholarshipsSubPage/MCN/MCN.module.scss
+++ b/src/components/Content/Scholarships/scholarshipsSubPage/MCN/MCN.module.scss
@@ -7,7 +7,7 @@
 
   .mcnDetails {
     padding: 25.5px 45px;
-    border-radius: 22.5px;
+    border-radius: var(--borderRadius);
     background-color: $themeBgColor;
     display: flex;
     flex-direction: column;
@@ -159,6 +159,7 @@
       justify-content: center;
       align-items: center;
       gap: 10px;
+
       input[type="checkbox"] {
         appearance: none;
         -webkit-appearance: none;
@@ -172,8 +173,9 @@
         accent-color: $themeColor;
 
         &:checked {
-          appearance: auto;
-          background-color: $themeColor;
+          background: $checkbox-bg no-repeat center center /
+            120%;
+          border: none;
         }
       }
       .checkBoxContainer {
