--- a/src/components/Content/Scholarships/scholarshipsSubPage/SAF/SAF.module.scss
+++ b/src/components/Content/Scholarships/scholarshipsSubPage/SAF/SAF.module.scss
@@ -7,7 +7,7 @@
 
   .safDetails {
     padding: 25.5px 45px;
-    border-radius: 22.5px;
+    border-radius: var(--borderRadius);
     background-color: $themeBgColor;
     display: flex;
     flex-direction: column;
