--- a/src/components/Content/DuplicateIdCard/DuplicateIdCard.module.scss
+++ b/src/components/Content/DuplicateIdCard/DuplicateIdCard.module.scss
@@ -7,7 +7,7 @@
   gap: 20px;
   .formContainer {
     padding: 25.5px 45px;
-    border-radius: 22.5px;
+    border-radius: var(--borderRadius);
     background-color: $themeBgColor;
     .duplicateForm {
       display: flex;
