--- a/src/components/Content/UploadPhotoForIdCard/UploadPhotoForIdCard.module.scss
+++ b/src/components/Content/UploadPhotoForIdCard/UploadPhotoForIdCard.module.scss
@@ -7,7 +7,7 @@
   gap: 20px;
   .uploadPhoto {
     padding: 25.5px 45px;
-    border-radius: 22.5px;
+    border-radius: var(--borderRadius);
     background-color: $themeBgColor;
 
     .photoForm {
