--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -19,8 +19,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 120px;
-  border-radius: 22.5px;
+  height: 140px;
 
   .logoSection {
     display: flex;
@@ -169,4 +168,22 @@
       }
     }
   }
+}
+
+@media screen and (max-height: 800px) {
+  .header{
+    height: 95px;
+  }
+}
+@media screen and (max-height: 700px) {
+  .header{
+    height: 90px;
+    .logoSection{
+      .logo{
+        width: 70px;
+        height: 70px;
+      }
+    }
+  }
+
 }
