--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -229,42 +229,42 @@
 
 @media screen and (max-width: 790px) {
   .header {
-    // padding: 21px 10px;
+    padding: 21px 10px;
     .logoSection {
       .logo {
-        width: 70px;
-        height: 70px;
+        width: 50px;
+        height: 50px;
       }
       .campusDetails {
-        display: none;
-        //   .title {
-        //     font-size: 20px;
-      }
-      //   .campus {
-      //     font-size: 15px;
-      //   }
-      // }
-    }
-    // .pageTitle {
-    //   font-size: 25px;
-    // }
-    .userSection {
-        .userImage {
-          width: 60px;
-          height: 60px;
+        // display: none;
+        .title {
+          font-size: 20px;
         }
-      .userDetails {
-        display: none;
-        //     .username {
-        //       font-size: 18px;
-        //     }
-        //     .userId {
-        //       font-size: 14px;
-        //     }
-        //     .hoverInfo {
-        //       font-size: 14px;
+        .campus {
+          font-size: 15px;
+        }
       }
     }
-    // }
+    .pageTitle {
+      font-size: 25px;
+    }
+    .userSection {
+      .userImage {
+        width: 40px;
+        height: 40px;
+      }
+      .userDetails {
+        // display: none;
+        .username {
+          font-size: 18px;
+        }
+        .userId {
+          font-size: 14px;
+        }
+        .hoverInfo {
+          font-size: 14px;
+        }
+      }
+    }
   }
 }
