--- a/src/components/Content/MyProfile/myProfileSubPage/Address/Address.module.scss
+++ b/src/components/Content/MyProfile/myProfileSubPage/Address/Address.module.scss
@@ -15,25 +15,31 @@
   gap: 28.5px;
   font-family: "inter", sans-serif;
   font-size: 19.9px;
+
   .addresslines {
     @include flexCenter;
+    gap: 5px;
   }
   .addressChangeMail {
     @include flexCenter(row);
-    gap: 5px;
+    gap: 15px;
+
     .forAddChange {
       font-weight: 500;
     }
+
     .mailId {
       @include flexCenter(row);
-      gap: 15px;
       font-weight: 400px;
+
       a {
         @include flexCenter(row);
         color: $themeColor;
         text-decoration: none;
+
         img {
           scale: 0.75;
+          margin: 0 3px;
         }
       }
     }
