--- a/src/components/Content/MyProfile/myProfileSubPage/General/General.module.scss
+++ b/src/components/Content/MyProfile/myProfileSubPage/General/General.module.scss
@@ -8,15 +8,17 @@
   padding: 25.5px 45px;
   border-radius: var(--borderRadius);
   background-color: $themeBgColor;
-  //   align-items: center;
+
   .detail {
     display: grid;
     grid-template-columns: 324px auto;
     font-family: "inter", sans-serif;
     font-size: 18.75px;
+
     .name {
       font-weight: 500;
     }
+
     .value {
       font-weight: 400;
       color: $themeColor;
@@ -25,4 +27,24 @@
       }
     }
   }
+}
+
+@media screen and (max-width: 990px) {
+  .general {
+    padding: 25.5px 35px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .general .detail {
+    font-size: 17.5px;
+  }
+}
+@media screen and (max-width: 815px) {
+  .general {
+    padding: 25.5px 25px;
+    
+  }
+  .general .detail {
+    font-size: 16.5px;
+  }
+  
 }
