--- a/src/components/Navigator/Navigator.module.scss
+++ b/src/components/Navigator/Navigator.module.scss
@@ -12,13 +12,30 @@
   align-items: center;
   transition: background-color 0.25s;
   min-width: 150px;
+
+  @media screen and (max-width: 1210px) {
+    font-size: 15px;
+    padding: 12px 12px;
+    min-width: 120px;
+  }
+
+  @media screen and (max-width: 1040px) {
+    font-size: 14px;
+    padding: 12px 10px;
+    min-width: 100px;
+  }
+  @media screen and (max-width: 900px) {
+    font-size: 13px;
+    padding: 12px 8px;
+    min-width: 80px;
+  }
 }
 
 .navigator {
   display: flex;
   align-items: center;
   gap: 15px;
-  height: 54px;
+  height: 50px;
   padding-left: 22px;
   font-family: "Inter";
   min-height: fit-content;
@@ -49,5 +66,34 @@
     @include box;
     color: $bodyColor;
     background-color: $themeColor;
+  }
+}
+
+@media screen and (max-width: 1210px) {
+  .navigator {
+    gap: 10px;
+  }
+}
+@media screen and (max-width: 1040px) {
+  .navigator {
+    font-size: 13px;
+    padding-left: 12px;
+  }
+}
+@media screen and (max-width: 900px) {
+  .navigator {
+    gap: 5px;
+  }
+}
+@media screen and (max-width: 815px) {
+  .navigator {
+    padding-left: 10px;
+    gap: 3px;
+    a {
+      img {
+        width: 15px;
+        height: 15px;
+      }
+    }
   }
 }
