--- a/src/PageStructure/PageStructure.module.scss
+++ b/src/PageStructure/PageStructure.module.scss
@@ -4,19 +4,36 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
+  overflow: hidden;
 
   .mainContent {
     display: flex;
     flex-grow: 1;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 
     .content {
-      padding: var(--mainContentPadding) var(--mainContentPadding) var(--mainContentPadding) 0;
       display: flex;
       flex-direction: column;
       gap: var(--mainContentGap);
       width: 100%;
+      height: 100%;
+      overflow: hidden;
+
+      .headerContainer {
+        padding-top: var(--mainContentPadding);
+        padding-right: var(--mainContentPadding);
+      }
+
+      .scrollContainer {
+        flex-grow: 1;
+        overflow-y: auto;
+        padding-right: var(--mainContentPadding);
+        padding-bottom: var(--mainContentPadding);
+        width: 100%;
+      }
     }
   }
 }
