--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,11 +5,14 @@
     opacity: 0;
     transform: translate(7%, 0px);
   }
+
   100% {
     opacity: 1;
     transform: translate(7%, 10px);
   }
 }
+
+
 
 .header {
   background-color: $themeColor;
@@ -90,6 +93,7 @@
         font-size: 24.75px;
         font-weight: 500;
       }
+
       .userId {
         display: flex;
         font-family: "EuropaGroteskReg";
@@ -107,6 +111,7 @@
           cursor: pointer;
           transform: translateY(0px);
         }
+
         .dropdownArrow {
           transform: translateY(-2px);
           width: 14px;
@@ -115,10 +120,10 @@
 
         .activeDropdownArrow {
           width: 14px;
-
           rotate: 180deg;
         }
       }
+
       .hoverInfo {
         font-family: "inter", sans-serif;
         font-weight: 600;
@@ -145,7 +150,43 @@
           right: 0%;
           transform: translate(-100%, 50%);
           rotate: 90deg;
+
+          @media screen and (max-width: 790px) {
+            right: 18px; // Align with the center of the 35px button (approx)
+            top: -6px; // Move up to touch the button
+            transform: rotate(0deg); // Point up
+            // Note: The triangle SVG orientation determines rotation.
+            // If default is 90deg (pointing left/right?), user said "arrow image is not align".
+            // Assuming triangle.svg points up by default? Or right?
+            // Existing is rotate 90.
+            // Let's assume we need to shift it right.
+            transform: translate(-20%, -40%) rotate(0deg);
+          }
         }
+
+        .mobileUserDetails {
+          display: none;
+
+
+
+          .mobileName {
+            font-size: 16px;
+            font-weight: 600;
+            color: $themeColor;
+            margin: 0;
+            text-align: center;
+            display: block;
+          }
+
+          .mobileId {
+            font-size: 14px;
+            color: #555555;
+            margin: 0;
+            text-align: center;
+            display: block;
+          }
+        }
+
         .msg {
           display: flex;
           align-items: center;
@@ -153,15 +194,18 @@
           padding: 8px 19px;
           border-radius: 10px;
           gap: 5px;
+
           .power {
             scale: 0.75;
           }
+
           &:hover {
             background-color: #e1e1e1;
             cursor: pointer;
           }
         }
       }
+
       .activeHover {
         display: block;
         animation: logout 0.3s ease-in forwards;
@@ -170,14 +214,18 @@
   }
 }
 
+
+
 @media screen and (max-height: 800px) {
   .header {
     height: 95px;
   }
 }
+
 @media screen and (max-height: 700px) {
   .header {
     height: 90px;
+
     .logoSection {
       .logo {
         width: 70px;
@@ -186,41 +234,51 @@
     }
   }
 }
+
 @media screen and (max-width: 990px) {
   .header {
     padding: 21px 20px;
     height: 90px;
+
     .logoSection {
       .logo {
         width: 60px;
         height: 60px;
       }
+
       .campusDetails {
         .title {
           font-size: 24px;
         }
+
         .campus {
           font-size: 18px;
         }
       }
     }
+
     .pageTitle {
       font-size: 30px;
     }
+
     .userSection {
       .userImage {
         width: 45px;
         height: 45px;
       }
+
       .userDetails {
         .username {
           font-size: 20px;
         }
+
         .userId {
           font-size: 16px;
         }
+
         .hoverInfo {
           font-size: 16px;
+
         }
       }
     }
@@ -230,37 +288,86 @@
 @media screen and (max-width: 790px) {
   .header {
     padding: 21px 10px;
+    height: 80px; // Slightly reduced height for mobile
+
     .logoSection {
       .logo {
-        width: 50px;
-        height: 50px;
+        width: 45px;
+        height: 45px;
       }
+
       .campusDetails {
         .title {
-          font-size: 20px;
+          font-size: 18px;
         }
+
         .campus {
-          font-size: 15px;
+          font-size: 14px;
         }
       }
     }
+
     .pageTitle {
-      font-size: 25px;
+      display: none; // HIDE PAGE TITLE
     }
+
     .userSection {
+      // Oval background for profile
+      background-color: rgba(255, 255, 255, 0.15);
+      border-radius: 50px;
+      padding: 5px 8px;
+      gap: 0px; // Touching
+
       .userImage {
         width: 40px;
         height: 40px;
       }
+
       .userDetails {
+
+        // HIDE Desktop Name and ID text
         .username {
-          font-size: 18px;
+          display: none;
         }
+
         .userId {
-          font-size: 14px;
+          gap: 0; // Remove gap since text is gone
+          width: fit-content;
+
+          // Hide ID text but keep arrow
+          font-size: 0;
+
+          .userMenuDropDown {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 35px; // Bigger size
+            height: 35px;
+            background-color: rgba(255, 255, 255, 0.25);
+            border-radius: 50%;
+          }
+
+          .dropdownArrow,
+          .activeDropdownArrow {
+            filter: brightness(10); // Make white if needed or keep default
+          }
         }
+
         .hoverInfo {
-          font-size: 14px;
+          width: 200px;
+          right: -10px; // Adjust alignment
+          transform: translate(0, 15px);
+
+          .mobileUserDetails {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+            margin-bottom: 5px;
+            width: 100%;
+
+          }
         }
       }
     }
